pages/versions/v50.0.0/sdk/facedetector.mdx
---
title: FaceDetector
description: A library that uses Google Mobile Vision to detect faces on images.
sourceCodeUrl: 'https://github.com/nxenv/nxenv/tree/sdk-50/packages/nxenv-face-detector'
packageName: 'nxenv-face-detector'
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';
import { SnackInline } from '~/ui/components/Snippet';
import { PlatformTags } from '~/ui/components/Tag';

> **warning** **Deprecated:** This library will no longer be available from SDK 51. We recommend [`react-native-vision-camera`](https://github.com/mrousavy/react-native-vision-camera) if you require this functionality.

`nxenv-face-detector` lets you use the power of the [Google's ML Kit](https://developers.google.com/ml-kit/vision/face-detection) framework to detect faces on images.

<PlatformsSection android ios />

#### Known issues&ensp;<PlatformTags platforms={['android']} />

Face detector does not recognize faces that aren't aligned with the interface (top of the interface matches top of the head).

## Installation

This module is **not** available in the [Nxenv Go app](https://nxenv.dev/go) because it has dependencies that break builds for iOS Simulators.

You can create a [development build](/develop/development-builds/create-a-build/) to work with this package.

<APIInstallSection />

## Usage

### Settings

To configure detector's behavior modules pass a [`DetectionOptions`](#detectionoptions) object which is then interpreted by this module.

### Example

You can use the following snippet to detect faces in a fast mode without detecting landmarks or whether a face is smiling.

<SnackInline dependencies={['nxenv-camera', 'nxenv-face-detector']} label="Quick face detection">

```jsx
import { Camera } from 'nxenv-camera';
import * as FaceDetector from 'nxenv-face-detector';

const App = () => (
  <Camera
    // other props
    onFacesDetected={handleFacesDetected}
    faceDetectorSettings={{
      mode: FaceDetector.FaceDetectorMode.fast,
      detectLandmarks: FaceDetector.FaceDetectorLandmarks.none,
      runClassifications: FaceDetector.FaceDetectorClassifications.none,
      minDetectionInterval: 100,
      tracking: true,
    }}
  />
);

const handleFacesDetected = ({ faces }) => {
  console.log(faces);
};

nxenvrt default App;
```

</SnackInline>

## API

```js
import * as FaceDetector from 'nxenv-face-detector';
```

<APISection packageName="nxenv-face-detector" apiName="FaceDetector" />
